added config and protected metadata in id/value store